--- a/Transformer_ViT_MLP.ipynb
+++ b/Transformer_ViT_MLP.ipynb
@@ -398,46 +398,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "WzwvDtljRJL-"
-      },
-      "outputs": [],
-      "source": [
-        "def train_model(model, train_loader, criterion, optimizer, device='cpu'):\n",
-        "    model.train()\n",
-        "    total_loss = 0\n",
-        "\n",
-        "    for batch_x, batch_y in train_loader:\n",
-        "        batch_x, batch_y = batch_x.to(device), batch_y.to(device)\n",
-        "\n",
-        "        optimizer.zero_grad()\n",
-        "        logits = model(batch_x)  # [B, 2]\n",
-        "        loss = criterion(logits, batch_y)\n",
-        "        loss.backward()\n",
-        "        optimizer.step()\n",
-        "\n",
-        "        total_loss += loss.item()\n",
-        "\n",
-        "    return total_loss / len(train_loader)\n",
-        "\n",
-        "def evaluate_model(model, val_loader, device='cpu'):\n",
-        "    model.eval()\n",
-        "    correct = 0\n",
-        "    total = 0\n",
-        "    with torch.no_grad():\n",
-        "        for batch_x, batch_y in val_loader:\n",
-        "            batch_x, batch_y = batch_x.to(device), batch_y.to(device)\n",
-        "            logits = model(batch_x)  # [B, 2]\n",
-        "            preds = logits.argmax(dim=-1)  # [B]\n",
-        "            correct += (preds == batch_y).sum().item()\n",
-        "            total += batch_x.size(0)\n",
-        "\n",
-        "    return correct / total\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -474,6 +434,38 @@
         }
       ],
       "source": [
+        "def train_model(model, train_loader, criterion, optimizer, device='cpu'):\n",
+        "    model.train()\n",
+        "    total_loss = 0\n",
+        "\n",
+        "    for batch_x, batch_y in train_loader:\n",
+        "        batch_x, batch_y = batch_x.to(device), batch_y.to(device)\n",
+        "\n",
+        "        optimizer.zero_grad()\n",
+        "        logits = model(batch_x)  # [B, 2]\n",
+        "        loss = criterion(logits, batch_y)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "        total_loss += loss.item()\n",
+        "\n",
+        "    return total_loss / len(train_loader)\n",
+        "\n",
+        "def evaluate_model(model, val_loader, device='cpu'):\n",
+        "    model.eval()\n",
+        "    correct = 0\n",
+        "    total = 0\n",
+        "    with torch.no_grad():\n",
+        "        for batch_x, batch_y in val_loader:\n",
+        "            batch_x, batch_y = batch_x.to(device), batch_y.to(device)\n",
+        "            logits = model(batch_x)  # [B, 2]\n",
+        "            preds = logits.argmax(dim=-1)  # [B]\n",
+        "            correct += (preds == batch_y).sum().item()\n",
+        "            total += batch_x.size(0)\n",
+        "\n",
+        "    return correct / total\n",
+        "\n",
+        "\n",
         "if __name__ == \"__main__\":\n",
         "    # Hyperparameters\n",
         "    BATCH_SIZE = 32\n",
@@ -643,6 +635,170 @@
         "    device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "    train_model(model, train_loader, criterion, optimizer, num_epochs, device)\n",
         "    evaluate_model(model, test_loader, device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Transfer Learning\n",
+        "\n",
+        "\"\"\"\n",
+        "In relu.py, we implemented a simple neural network with a single hidden layer using the ReLU activation function.\n",
+        "\n",
+        "Now, let's move on to the next task. The goal is to extract features from a pretrained AlexNet model and use those features to train a two-layer fully connected network on the CIFAR-10 dataset.\n",
+        "\n",
+        "Specifically, you need to:\n",
+        "1. Extract features from the pretrained AlexNet model up to the fc2 layer (before the final classification layer).\n",
+        "2. Build a two-layer fully connected network that takes the extracted features as input and classifies the CIFAR-10 dataset (10 classes). Use the ReLU activation function in the hidden layer.\n",
+        "3. Define a custom loss function that combines standard cross-entropy loss with an L1 regularization term on the model parameters.\n",
+        "4. Train the two-layer fully connected network on the CIFAR-10 dataset using the custom loss function.\n",
+        "\n",
+        "Here's some useful code hint to consider:\n",
+        "class SampleNetwork(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(SampleNetwork, self).__init__()\n",
+        "        # TODO: Initialization code goes here\n",
+        "\n",
+        "    def forward(self, input):\n",
+        "        # TODO: Forward pass code goes here\n",
+        "        pass\n",
+        "\"\"\"\n",
+        "import argparse\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torchvision.models as models\n",
+        "import torchvision.transforms as transforms\n",
+        "from torch.utils.data import DataLoader\n",
+        "from torchvision.datasets import CIFAR10\n",
+        "\n",
+        "\n",
+        "def load_cifar10_dataset() -> CIFAR10:\n",
+        "    \"\"\"\n",
+        "    Load CIFAR-10 dataset and apply transformations accordingly\n",
+        "\n",
+        "    Returns:\n",
+        "        train_dataset (torchvision.datasets.cifar.CIFAR10): CIFAR-10 train dataset\n",
+        "    \"\"\"\n",
+        "    transform = transforms.Compose([\n",
+        "        transforms.Resize((224, 224)),\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+        "    ])\n",
+        "    train_dataset = CIFAR10(\n",
+        "        root='./data',\n",
+        "        train=True,\n",
+        "        transform=transform,\n",
+        "        download=True\n",
+        "    )\n",
+        "    return train_dataset\n",
+        "\n",
+        "class SampleNetwork(nn.Module):\n",
+        "    def __init__(self, alexnet):\n",
+        "        super(SampleNetwork, self).__init__()    \n",
+        "        self.alexnet = alexnet\n",
+        "        self.fc1 = nn.Linear(4096, 512)\n",
+        "        self.fc2 = nn.Linear(512, 10)\n",
+        "        self.relu = nn.ReLU()\n",
+        "\n",
+        "    def forward(self, input):\n",
+        "        # TODO: Forward pass code goes here\n",
+        "        out1 = self.alexnet.features(input)\n",
+        "        out2 = self.alexnet.avgpool(out1)\n",
+        "        out2 = torch.flatten(out2, 1)\n",
+        "        out3 = self.alexnet.classifier[:-1](out2)\n",
+        "\n",
+        "        out4 = self.fc1(out3)\n",
+        "        out5 = self.relu(out4)\n",
+        "        return self.fc2(out5)\n",
+        "\n",
+        "def main(args: argparse.Namespace) -> None:\n",
+        "    \"\"\"\n",
+        "    Main function of the script\n",
+        "\n",
+        "    Args:\n",
+        "        args (argparse.Namespace): Hyperparameters\n",
+        "    \"\"\"\n",
+        "    # Set device\n",
+        "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "    # Load pretrained AlexNet\n",
+        "    alexnet = models.alexnet(pretrained=True).to(device)\n",
+        "    # Freeze AlexNet parameters\n",
+        "    for param in alexnet.parameters():\n",
+        "        param.requires_grad = False\n",
+        "    alexnet.eval()\n",
+        "\n",
+        "    print(alexnet)\n",
+        "    \n",
+        "\n",
+        "\n",
+        "    # Load CIFAR-10 dataset\n",
+        "    train_dataset = load_cifar10_dataset()\n",
+        "    train_loader = DataLoader(\n",
+        "        train_dataset,\n",
+        "        batch_size=32,\n",
+        "        shuffle=True\n",
+        "    )\n",
+        "\n",
+        "    # TODO Put your code here\n",
+        "    MyModel = SampleNetwork(alexnet).to(device)\n",
+        "\n",
+        "    # Set optimizer - only optimize parameters that require gradients\n",
+        "    parameters = [p for p in MyModel.parameters() if p.requires_grad]\n",
+        "    \n",
+        "    assert parameters is not None, \"Define parameters for optimizer\"\n",
+        "    optimizer = torch.optim.Adam(\n",
+        "        parameters,\n",
+        "        lr=args.learning_rate\n",
+        "    )\n",
+        "\n",
+        "    # Training loop\n",
+        "    for _ in range(args.n_epoch):\n",
+        "        for inputs, labels in train_loader:\n",
+        "            # TODO Your code goes here\n",
+        "            inputs, labels = inputs.to(device), labels.to(device)\n",
+        "            output = MyModel(inputs)\n",
+        "            print(output.shape, )\n",
+        "            loss_fn = torch.nn.CrossEntropyLoss()  # TODO Put your code here\n",
+        "            loss = loss_fn(output, labels)           \n",
+        "\n",
+        "            \n",
+        "            # Backpropagation and optimization\n",
+        "            optimizer.zero_grad()\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "            print(f'Loss: {loss.item():.4f}')\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Define arguments\n",
+        "    parser = argparse.ArgumentParser()\n",
+        "    parser.add_argument(\n",
+        "        '--learning_rate',\n",
+        "        type=float,\n",
+        "        default=0.001,\n",
+        "        help='Learning rate for the optimizer'\n",
+        "    )\n",
+        "    parser.add_argument(\n",
+        "        '--batch_size',\n",
+        "        type=int,\n",
+        "        default=32,\n",
+        "        help='Batch size for training'\n",
+        "    )\n",
+        "    parser.add_argument(\n",
+        "        '--n_epoch',\n",
+        "        type=int,\n",
+        "        default=10,\n",
+        "        help='Number of epochs to train'\n",
+        "    )\n",
+        "    args = parser.parse_args()\n",
+        "    # NOTE Add more hyperparameters as needed :)\n",
+        "\n",
+        "    # Run main code\n",
+        "    main(args)"
       ]
     },
     {
