--- a/DNN_KFold_KNN.ipynb
+++ b/DNN_KFold_KNN.ipynb
@@ -332,7 +332,7 @@
         "# Usage\n",
         "X = np.random.rand(100, 5)\n",
         "y = np.random.randint(0, 2, 100)\n",
-        "print(\"Accuracy:\", k_fold_cv(X, y))"
+        "print(\"Accuracy:\", k_fold_cv(X, y))\n"
       ]
     },
     {
@@ -459,13 +459,6 @@
         "print(\"Final centroids:\", kmean.centroids)\n",
         "print(\"Prediction for [1.2, 1.2]:\", kmean.predict([[1.2, 1.2, 100]]))"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
