--- a/DNN_KFold_KNN.ipynb
+++ b/DNN_KFold_KNN.ipynb
@@ -128,6 +128,182 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def pad_image(image, pad, value=0):\n",
+        "    \"\"\"\n",
+        "    Zero padding (or constant padding)\n",
+        "    image: (H, W) or (C, H, W)\n",
+        "    pad: int (padding on each side)\n",
+        "    \"\"\"\n",
+        "    if image.ndim == 2:\n",
+        "        return np.pad(image, ((pad, pad), (pad, pad)), constant_values=value)\n",
+        "    else:  # (C, H, W)\n",
+        "        return np.pad(image, ((0, 0), (pad, pad), (pad, pad)), constant_values=value)\n",
+        "\n",
+        "class Conv2D:\n",
+        "    def __init__(self, in_channels, out_channels, kernel_size, stride=1, padding=0):\n",
+        "        self.in_channels = in_channels\n",
+        "        self.out_channels = out_channels\n",
+        "        self.kernel_size = kernel_size if isinstance(kernel_size, tuple) else (kernel_size, kernel_size)\n",
+        "        self.stride = stride if isinstance(stride, tuple) else (stride, stride)\n",
+        "        self.padding = padding\n",
+        "        \n",
+        "        # Xavier/Glorot initialization\n",
+        "        self.weights = np.random.randn(out_channels, in_channels, \n",
+        "                                       self.kernel_size[0], self.kernel_size[1]) * np.sqrt(2.0 / (in_channels * kernel_size**2))\n",
+        "        self.bias = np.zeros((out_channels, 1))\n",
+        "        \n",
+        "        self.output = None\n",
+        "        self.input_padded = None\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        \"\"\"\n",
+        "        x: input tensor of shape (batch_size, in_channels, H, W)\n",
+        "        \"\"\"\n",
+        "        batch_size, in_channels, H, W = x.shape\n",
+        "        assert in_channels == self.in_channels\n",
+        "        \n",
+        "        # Add padding\n",
+        "        if self.padding > 0:\n",
+        "            x_padded = np.zeros((batch_size, in_channels, H + 2*self.padding, W + 2*self.padding))\n",
+        "            for i in range(batch_size):\n",
+        "                x_padded[i] = pad_image(x[i], self.padding)\n",
+        "        else:\n",
+        "            x_padded = x\n",
+        "        \n",
+        "        self.input_padded = x_padded\n",
+        "        \n",
+        "        kh, kw = self.kernel_size\n",
+        "        sh, sw = self.stride\n",
+        "        out_h = (H + 2*self.padding - kh) // sh + 1\n",
+        "        out_w = (W + 2*self.padding - kw) // sw + 1\n",
+        "        \n",
+        "        self.output = np.zeros((batch_size, self.out_channels, out_h, out_w))\n",
+        "        \n",
+        "        # Convolution loop\n",
+        "        for n in range(batch_size):\n",
+        "            for c_out in range(self.out_channels):\n",
+        "                for h in range(out_h):\n",
+        "                    for w in range(out_w):\n",
+        "                        h_start = h * sh\n",
+        "                        w_start = w * sw\n",
+        "                        window = x_padded[n, :, h_start:h_start+kh, w_start:w_start+kw]\n",
+        "                        self.output[n, c_out, h, w] = np.sum(window * self.weights[c_out]) + self.bias[c_out]\n",
+        "        \n",
+        "        return self.output\n",
+        "\n",
+        "class ReLU:\n",
+        "    def forward(self, x):\n",
+        "        self.mask = (x > 0)\n",
+        "        return x * self.mask\n",
+        "\n",
+        "class MaxPool2D:\n",
+        "    def __init__(self, kernel_size=2, stride=2):\n",
+        "        self.kernel_size = kernel_size\n",
+        "        self.stride = stride\n",
+        "        self.last_input = None\n",
+        "        \n",
+        "    def forward(self, x):\n",
+        "        batch_size, channels, H, W = x.shape\n",
+        "        kh, kw = self.kernel_size, self.kernel_size\n",
+        "        sh, sw = self.stride, self.stride\n",
+        "        \n",
+        "        out_h = (H - kh) // sh + 1\n",
+        "        out_w = (W - kw) // sw + 1\n",
+        "        \n",
+        "        output = np.zeros((batch_size, channels, out_h, out_w))\n",
+        "        self.last_input = x\n",
+        "        \n",
+        "        for n in range(batch_size):\n",
+        "            for c in range(channels):\n",
+        "                for h in range(out_h):\n",
+        "                    for w in range(out_w):\n",
+        "                        h_start = h * sh\n",
+        "                        w_start = w * sw\n",
+        "                        window = x[n, c, h_start:h_start+kh, w_start:w_start+kw]\n",
+        "                        output[n, c, h, w] = np.max(window)\n",
+        "        \n",
+        "        return output\n",
+        "\n",
+        "class Flatten:\n",
+        "    def forward(self, x):\n",
+        "        self.input_shape = x.shape\n",
+        "        return x.reshape(x.shape[0], -1)\n",
+        "\n",
+        "class Linear:\n",
+        "    def __init__(self, in_features, out_features):\n",
+        "        self.weights = np.random.randn(out_features, in_features) * 0.01\n",
+        "        self.bias = np.zeros((out_features, 1))\n",
+        "        self.input = None\n",
+        "        \n",
+        "    def forward(self, x):\n",
+        "        \"\"\"\n",
+        "        x: (batch_size, in_features)\n",
+        "        \"\"\"\n",
+        "        self.input = x\n",
+        "        batch_size = x.shape[0]\n",
+        "        # Output: (batch_size, out_features)\n",
+        "        out = x @ self.weights.T + self.bias.T  # broadcasting bias\n",
+        "        return out\n",
+        "\n",
+        "# Example CNN: similar to LeNet-style for MNIST\n",
+        "class SimpleCNN:\n",
+        "    def __init__(self):\n",
+        "        self.conv1 = Conv2D(in_channels=1, out_channels=6, kernel_size=5, stride=1, padding=2)\n",
+        "        self.relu1 = ReLU()\n",
+        "        self.pool1 = MaxPool2D(kernel_size=2, stride=2)\n",
+        "        \n",
+        "        self.conv2 = Conv2D(in_channels=6, out_channels=16, kernel_size=5, stride=1, padding=0)\n",
+        "        self.relu2 = ReLU()\n",
+        "        self.pool2 = MaxPool2D(kernel_size=2, stride=2)\n",
+        "        \n",
+        "        self.flatten = Flatten()\n",
+        "        self.fc1 = Linear(in_features=16*5*5, out_features=120)\n",
+        "        self.relu3 = ReLU()\n",
+        "        self.fc2 = Linear(in_features=120, out_features=84)\n",
+        "        self.relu4 = ReLU()\n",
+        "        self.fc3 = Linear(in_features=84, out_features=10)  # 10 classes\n",
+        "    \n",
+        "    def forward(self, x):\n",
+        "        \"\"\"\n",
+        "        x: (batch_size, 1, 28, 28) for MNIST\n",
+        "        \"\"\"\n",
+        "        x = self.conv1.forward(x)      # -> (B, 6, 28, 28)  [with padding=2]\n",
+        "        x = self.relu1.forward(x)\n",
+        "        x = self.pool1.forward(x)      # -> (B, 6, 14, 14)\n",
+        "        \n",
+        "        x = self.conv2.forward(x)      # -> (B, 16, 10, 10)\n",
+        "        x = self.relu2.forward(x)\n",
+        "        x = self.pool2.forward(x)      # -> (B, 16, 5, 5)\n",
+        "        \n",
+        "        x = self.flatten.forward(x)    # -> (B, 400)\n",
+        "        x = self.fc1.forward(x)\n",
+        "        x = self.relu3.forward(x)\n",
+        "        x = self.fc2.forward(x)\n",
+        "        x = self.relu4.forward(x)\n",
+        "        x = self.fc3.forward(x)         # -> (B, 10)\n",
+        "        return x\n",
+        "\n",
+        "# Test it\n",
+        "if __name__ == \"__main__\":\n",
+        "    np.random.seed(42)\n",
+        "    model = SimpleCNN()\n",
+        "    \n",
+        "    # Simulate a batch of 4 MNIST images: (4, 1, 28, 28)\n",
+        "    x = np.random.randn(4, 1, 28, 28)\n",
+        "    output = model.forward(x)\n",
+        "    print(\"Input shape:\", x.shape)\n",
+        "    print(\"Output shape:\", output.shape)  # Should be (4, 10)\n",
+        "    print(\"Logits sample:\\n\", output[0])"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 13,
       "metadata": {},
       "outputs": [
