--- a/DNN_CNN_KNN.ipynb
+++ b/DNN_CNN_KNN.ipynb
@@ -132,6 +132,149 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "%matplotlib inline\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import random\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "import torchvision\n",
+        "from tqdm import tqdm\n",
+        "\n",
+        "train_dataset = torchvision.datasets.FashionMNIST(\n",
+        "    root='./',\n",
+        "    train=True,\n",
+        "    download=True,\n",
+        "    transform=torchvision.transforms.Compose([\n",
+        "      torchvision.transforms.ToTensor()\n",
+        "  ]),\n",
+        ")\n",
+        "val_dataset = torchvision.datasets.FashionMNIST(\n",
+        "    root='./',\n",
+        "    train=False,\n",
+        "    download=True,\n",
+        "    transform=torchvision.transforms.Compose([\n",
+        "      torchvision.transforms.ToTensor()\n",
+        "  ]),\n",
+        ")\n",
+        "\n",
+        "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
+        "print(device)\n",
+        "num_pixels = np.prod(train_dataset[0][0].numpy().shape)\n",
+        "print(num_pixels)\n",
+        "classes = ('T-Shirt', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle Boot')\n",
+        "\n",
+        "\n",
+        "image_chw, label = train_dataset[np.random.choice(len(train_dataset))]\n",
+        "print(image_chw.size())\n",
+        "num_in_channels = image_chw.size()[0]\n",
+        "plt.imshow(image_chw.numpy().squeeze(), cmap='gray')\n",
+        "plt.title(classes[label])\n",
+        "\n",
+        "\n",
+        "#  --------------------------- Simple Pytorch CNN network ---------------------------\n",
+        "class CNN(nn.Module):\n",
+        "  def __init__(self, num_in_channels, num_classes):\n",
+        "    \"\"\"\n",
+        "    Args:\n",
+        "      num_in_channels: input dimension\n",
+        "      num_classes: output dimension\n",
+        "\n",
+        "    \"\"\"\n",
+        "    super(CNN, self).__init__()\n",
+        "    self.net = nn.Sequential(\n",
+        "        nn.Conv2d(num_in_channels, 4, 4, stride=2),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(4, 16, 4, stride=2),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Flatten(),\n",
+        "        nn.Linear(400, num_classes), # CE loss has softmax and negative log likelihood loss built in!\n",
+        "    )\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    return self.net(x)\n",
+        "\n",
+        "net = CNN(num_in_channels, len(classes)).to(device).eval()\n",
+        "\n",
+        "#  --------------------------- Simple Pytorch CNN network ---------------------------\n",
+        "\n",
+        "def validate(model, loader):\n",
+        "  \"\"\"Compute accuracy on the validation set.\n",
+        "\n",
+        "  Args:\n",
+        "    model: nn.Module\n",
+        "    loader: torch.utils.data.DataLoader\n",
+        "\n",
+        "  Returns:\n",
+        "    Accuracy in %.\n",
+        "\n",
+        "  \"\"\"\n",
+        "  with torch.no_grad():\n",
+        "    model.eval()\n",
+        "    total_examples = 0\n",
+        "    correct_examples = 0\n",
+        "    for image_bchw, label_b in loader:\n",
+        "      out_bc = model(image_bchw.to(device))\n",
+        "      pred_b = out_bc.argmax(1)\n",
+        "      correct_examples += torch.eq(pred_b, label_b.to(device)).sum().item()\n",
+        "      total_examples += out_bc.size(0)\n",
+        "    return correct_examples * 100.0 / total_examples\n",
+        "\n",
+        "train_batch_size = 128\n",
+        "val_batch_size = 4\n",
+        "num_epochs = 10\n",
+        "val_after_epochs = 1 \n",
+        "\n",
+        "train_loader = torch.utils.data.DataLoader(\n",
+        "    train_dataset,\n",
+        "    batch_size=train_batch_size,\n",
+        "    shuffle=True\n",
+        ")\n",
+        "val_loader = torch.utils.data.DataLoader(\n",
+        "    val_dataset,\n",
+        "    batch_size=val_batch_size,\n",
+        "    shuffle=False,\n",
+        ")\n",
+        "\n",
+        "\n",
+        "# --------------------------- Training/Validation Code ---------------------------\n",
+        "from torch.nn import CrossEntropyLoss\n",
+        "from torch.optim import Adam\n",
+        "\n",
+        "\n",
+        "\n",
+        "optimizer = Adam(net.parameters(), lr=0.0001)\n",
+        "\n",
+        "for epoch in range(num_epochs):\n",
+        "  net.train()\n",
+        "  for image_bchw, label_b in tqdm(train_loader, position=0, leave=True):\n",
+        "    out_bc = net(image_bchw.to(device))\n",
+        "    # TODO: ADD TRAINING OPTIMIZATION HERE\n",
+        "    criteria = CrossEntropyLoss()\n",
+        "    loss = criteria(out_bc, label_b.to(device))\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "\n",
+        "  if epoch % val_after_epochs == 0:\n",
+        "\n",
+        "    # run through the validation\n",
+        "    accuracy = validate(net, val_loader)\n",
+        "    print(f\"Epoch={epoch:d}, accuracy={accuracy:.3f}\")\n",
+        "\n",
+        "# --------------------------- Training/Validation Code ---------------------------"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --------------------------- Manual CNN network ---------------------------\n",
+        "\n",
         "import numpy as np\n",
         "\n",
         "def pad_image(image, pad, value=0):\n",
